--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,7 +121,7 @@
   <data name="favicon_20181126051103728" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\favicon-20181126051103728.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="giphy__1___1___2_" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\giphy (1) (1) (2).gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="loading" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\loading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
